Fixed case-insensitive login storage

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,8 +10,8 @@
 <p><img src="/images/clock_icon.png"></p>
 Select language:<br>
 <form action="/main/serv" method="get">
-    <input name="language" type="radio" value="en" onclick=this.form.submit()>English<br>
-    <input name="language" type="radio" value="ru" onclick=this.form.submit()>Русский<br>
+    <input name="language" type="radio" value="en" onclick=this.form.submit();>English<br>
+    <input name="language" type="radio" value="ru" onclick=this.form.submit();>Русский<br>
     <noscript>
         <input type="submit" value="Continue...">
     </noscript>
