Added form validation to login page.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>TimeServ app</title>
     <link href="/images/clock_icon.png" rel="icon" type="image/png" />
+    <link rel="stylesheet" type="text/css" href="/extras/mygreen.css">
 </head>
 <body>
 <h1>Welcome to TimeServ app!</h1>
