Fixed login logic and build.gradle

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,19 +4,13 @@
     <meta charset="utf-8"/>
     <title>TimeServ app</title>
     <link href="/images/clock_icon.png" rel="icon" type="image/png" />
-    <link rel="stylesheet" type="text/css" href="/extras/mygreen.css">
+    <link rel="stylesheet" type="text/css" href="/extras/mymain.css">
+    <meta http-equiv="refresh" content="1;url=/main/serv" />
 </head>
 <body>
+<div class="bigform">
 <h1>Welcome to TimeServ app!</h1>
 <p><img src="/images/clock_icon.png"></p>
-Select language:<br>
-<form action="/main/serv" method="get">
-    <input name="language" type="radio" value="en" onclick=this.form.submit();>English<br>
-    <input name="language" type="radio" value="ru" onclick=this.form.submit();>Русский<br>
-    <noscript>
-        <input type="submit" value="Continue...">
-    </noscript>
-</form>
-
+</div>
 </body>
 </html>
