Request paramener fix. User details jsp overhaul.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>TimeServ app</title>
     <link href="/images/clock_icon.png" rel="icon" type="image/png" />
-    <link rel="stylesheet" type="text/css" href="/extras/mymain.css">
+    <link rel="stylesheet" type="text/css" href="/extras/green_main.css">
     <meta http-equiv="refresh" content="1;url=/main/serv" />
 </head>
 <body>
