--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="refresh" content="1;url=/main/serv" />
 </head>
 <body>
-<div class="bigform">
+<div class="bigpanel">
 <h1>Welcome to TimeServ app!</h1>
 <p><img src="/images/clock_icon.png"></p>
 </div>
