--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>TimeServ app</title>
+    <title>Green Network</title>
     <link href="/images/clock_icon.png" rel="icon" type="image/png" />
     <link rel="stylesheet" type="text/css" href="/extras/green-common.css">
     <meta http-equiv="refresh" content="1;url=/main/serv" />
 </head>
 <body>
 <div class="bigpanel">
-<h1>Welcome to TimeServ app!</h1>
+<h1>Welcome to the Green Network!</h1>
 <p><img src="/images/clock_icon.png"></p>
 </div>
 </body>
